# meson_GD32F4_Template

./: .clang-format  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake  gd32f4xx_flash.ld  meson.build  meson_cross_file.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  ubuntu.sources
Core/Src/: led.c  syscalls.c
Driver/: CMakeLists.txt
Driver/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
Driver/GD32F4xx_standard_peripheral/Source/: gd32f4xx_adc.c  gd32f4xx_ctc.c  gd32f4xx_enet.c  gd32f4xx_gpio.c  gd32f4xx_ipa.c  gd32f4xx_iref.c  gd32f4xx_pmu.c  gd32f4xx_sdio.c  gd32f4xx_syscfg.c  gd32f4xx_trng.c
app/Inc/: gpio.h  led.h
app/Src/: gpio.c  main.c
doc/: 代码风格总结.md
doc/ximenzi_compete/初赛/: 3 2025年CIMC工业嵌入式系统开发（筹）工程设计文件模板.docx  4 2025年CIMC工业嵌入式系统开发（筹）初赛PPT模板.pptx
example/: meson.build
example/led/: meson.build
example/led/src/: main.cpp
lib/CMSIS/: core_cmFunc.h  meson.build
lib/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
lib/CMSIS/GD/GD32F4xx/Source/GCC/: startup_gd32f4xx.s
lib/GD32F4xx_standard_peripheral/: meson.build
lib/GD32F4xx_standard_peripheral/Source/: gd32f4xx_can.c  gd32f4xx_dac.c  gd32f4xx_dci.c  gd32f4xx_i2c.c  gd32f4xx_timer.c  gd32f4xx_tli.c  gd32f4xx_usart.c  gd32f4xx_wwdgt.c
subprojects/: HAL.wrap
